# python-library

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pyproject.toml  tox.ini
.github/: release-drafter.yml
.github/workflows/: build_and_test.yml  ci.yaml  ci.yml  codecov.yml  lint.yml  release-drafter.yaml  release_drafter.yml  test.yml  tox.yml
tests/: test_python_library.py
