[tool.poetry]
name = "python-library"
version = "1.0.5"
description = "Provide base template for python library"
authors = ["JaeyoungHeo <jay.jaeyoung@gmail.com>"]
maintainers = ["JaeyoungHeo <jay.jaeyoung@gmail.com>"]
readme = "README.md"
repository = "https://github.com/8percent/python-library"
license = "MIT"
packages = [
    { include = "python_library", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10 <3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
isort = "^5.12.0"
tox = "^4.3.5"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
codecov = "^2.1.12"
black = "^23.11.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Lint Configurations
[tool.isort]
profile = "black"
line_length = 88

[tool.black]
preview = true
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = [
    "tests",
]
