[project]
name = "python-library"
version = "2.0.0"
description = "Provide base template for python library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "JaeyoungHeo", email = "jay.jaeyoung@gmail.com" },
]
maintainers = [
    { name = "JaeyoungHeo", email = "jay.jaeyoung@gmail.com" },
]

[project.urls]
Repository = "https://github.com/8percent/python-library"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.1",
    "tox>=4.23",
    "tox-uv>=1.16",
    "ruff>=0.9",
    "pre-commit>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_library"]

# Lint Configurations
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = [
    "tests",
]
